--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -2,17 +2,11 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/icon-192.png" />
+		<link rel="icon" href="%sveltekit.assets%/icon-192.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
-		<noscript>
-			<div style="padding: 2rem; text-align: center;">
-				<h1>Nook nécessite JavaScript</h1>
-				<p>Veuillez activer JavaScript pour utiliser cette application.</p>
-			</div>
-		</noscript>
 	</body>
 </html>
