--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/icon-192.png" />
+		<link rel="apple-touch-icon" href="%sveltekit.assets%/icon-192.png" />
+		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
+		<meta name="theme-color" content="#4a90e2" /> <!-- À adapter à ta couleur primaire (ex: jardin-secret) -->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
