--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/icon-192.png" />
-		<link rel="apple-touch-icon" href="%sveltekit.assets%/icon-192.png" />
-		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
-		<meta name="theme-color" content="#4a90e2" /> <!-- À adapter à ta couleur primaire (ex: jardin-secret) -->
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="/icon-192.png" />
+  <link rel="apple-touch-icon" href="/icon-192.png" />
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#4a90e2" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Nook • Messagerie privée pour la famille</title>
+</head>
+<body>
+  <div id="app"></div>
+</body>
 </html>
