--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="/icon-192.png" />
-  <link rel="apple-touch-icon" href="/icon-192.png" />
-  <link rel="manifest" href="/manifest.json" />
-  <meta name="theme-color" content="#4a90e2" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Nook • Messagerie privée pour la famille</title>
-</head>
-<body>
-  <div id="app"></div>
-</body>
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+		<meta name="theme-color" content="#2d5a27" />
+		<meta name="description" content="Nook - Messagerie familiale ultra privée" />
+		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		%sveltekit.head%
+	</head>
+	<body data-sveltekit-preload-data="hover">
+		<div style="display: contents">%sveltekit.body%</div>
+	</body>
 </html>
